--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start:dev": "nodemon server"
+    "test": "jest",
+    "start:dev": "nodemon server",
+    "test:dev": "npm run test -- --watch-all"
   },
   "keywords": [],
   "author": "",
@@ -14,6 +16,7 @@
     "pg": "^8.8.0"
   },
   "devDependencies": {
+    "jest": "^29.4.1",
     "nodemon": "^2.0.20"
   }
 }
